guestBook/k8s/guestbook-backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-guestbook-backend
  labels:
    app: nodejs-guestbook
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-guestbook
      tier: backend
  template:
    metadata:
      labels:
        app: nodejs-guestbook
        tier: backend
    spec:
     containers:
      - name: backend
        image: k3d-myregistry.localhost:5111/nodejs-guestbook-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-server
          containerPort: 8080
