guestBook/k8s/guestbook-frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-guestbook-frontend
  labels:
    app: nodejs-guestbook
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: nodejs-guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: k3d-myregistry.localhost:5000/nodejs-guestbook-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-server
          containerPort: 8080
