guestBook/k8s/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: guestbook
 annotations:
   ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
 - host: guestbook.127.0.0.1.nip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: nodejs-guestbook-frontend
         servicePort: 80
